--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -12,6 +12,7 @@ mainClassName = 'App'
 // => 라이브러리 정보는 mvnrepository.com에서 검색하여 가져옴.
 dependencies {
     // mariadb jdbc driver
+    compile group: 'org.springframework', name: 'spring-context', version: '5.0.9.RELEASE'
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile 'com.google.guava:guava:23.0'
