--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -1,5 +1,3 @@
-
-
 plugins {
     id 'java'
     id 'eclipse-wtp'
@@ -19,7 +17,7 @@ dependencies {
     //tomcat서버에 이미있기때문에 설치할때만 생성해주고 war파일로 압축 할때는 포함하지않게 설정 (providedCompile)
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     // mariadb jdbc driver
-    compile group: 'org.springframework', name: 'spring-context', version: '5.0.9.RELEASE'
+    // compile group: 'org.springframework', name: 'spring-context', version: '5.0.9.RELEASE'
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile 'com.google.guava:guava:23.0'
