--- a/java110-servlet/build.gradle
+++ b/java110-servlet/build.gradle
@@ -9,9 +9,10 @@ tasks.withType(JavaCompile) {
   } 
 
 dependencies {
-    //File Upload 처리 라이브러리
+    //Servlet API 라이브러리
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    
+    // JSTP 구현 라이브러리    
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     //File Upload 처리 라이브러리    
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
     compile 'com.google.guava:guava:23.0'
