--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -16,11 +16,18 @@ plugins {
 dependencies {
     //tomcat서버에 이미있기때문에 설치할때만 생성해주고 war파일로 압축 할때는 포함하지않게 설정 (providedCompile)
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    // mariadb jdbc driver
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+    // mariadb jdbc driver
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
+    // Mybatis 라이브러리
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
+    // Mybatis Spring 연동 라이브러리
+    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
+    // Apache Common DBCP 라이브러리
+    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.5.0'
+    // Mybatis-Spring 라이브러리를 지원해주는 라이브러리
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.1.RELEASE'
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
