--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -24,10 +24,11 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     // Mybatis Spring 연동 라이브러리
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
-    // Apache Common DBCP 라이브러리
-    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.5.0'
     // Mybatis-Spring 라이브러리를 지원해주는 라이브러리
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.1.RELEASE'
+    // Apache Common DBCP 라이브러리
+    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+    
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
