Spring WebMVC 적용

--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -16,8 +16,15 @@ plugins {
 dependencies {
     //tomcat서버에 이미있기때문에 설치할때만 생성해주고 war파일로 압축 할때는 포함하지않게 설정 (providedCompile)
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+    
+    // Spring WebMVC 라이브러리
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.1.RELEASE'
+    
+    // Spring IoC 컨테이너 관련 라이브러리
+    // => Spring WebMVC를 추가하면 context 라이브러리는 자동으로 추가된다.
+    //compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
+    
     // mariadb jdbc driver
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
     // Mybatis 라이브러리
@@ -26,6 +33,7 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     // Mybatis-Spring 라이브러리를 지원해주는 라이브러리
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.1.RELEASE'
+    
     // Apache Common DBCP 라이브러리
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
     
