--- a/java110-spring-webmvc/build.gradle
+++ b/java110-spring-webmvc/build.gradle
@@ -15,12 +15,23 @@ tasks.withType(JavaCompile) {
 dependencies {
     
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     
     // Spring WebMVC 라이브러리
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.1.RELEASE'
-        
+    
+    // multipart/form-data를 처리할 Apache commons-fileupload 라이브러리
+    // => 이 라이브러리는  Servlet 3.0에서 제공하는 멀티파트 처리 기능을 사용하지 않고!
+    //    스프링에서 자체적으로 처리하고자 할 때 필요하다.
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+    
+    // 둘중하나만 사용해야함
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'    
+    //compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'    
+    
     compile 'com.google.guava:guava:23.0'
+    
     testCompile 'junit:junit:4.12'
 }
 
