--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -40,6 +40,11 @@ dependencies {
     // AOP 라이브러리
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
     
+    
+    // 제이슨데이터를 처리하는 라이브러리 - 둘중하나만 사용해야함
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'    
+    //compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
